test/errors/type/str/tofloat.yasl
mt.lookup('', .tofloat)(1)
